# qc_vector_db

./: .cursorrules  .gitignore  README.md  pyproject.toml
base/: index.py  smol.py
data/: image_db.db  milvus_demo.db  milvus_graph.db  milvus_twelvelabs_demo.db
embd/: __init__.py  custom.py  hg.py  index.py
llm/: __init__.py  index.py
milv/: mv_graph.py  mv_image.py  mv_rec.py  mv_text.py  mv_video.py
